# webcli

./: .gitignore  CMakeLists.txt  LICENSE  README.md  commands.example
src/: command.cpp  command.hpp  main.cpp  webcli.cpp  webcli.hpp
